tests/parser/invalid/missing_semicolon.src
fn test() -> int {
    int x = 5
    return x;
}
